--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,26 +36,17 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-   windows:
+  windows:
     # The type of runner that the job will run on
     runs-on: windows-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@v2
-      - name: Display version
-        run: |
-          (Get-ComputerInfo).OsHardwareAbstractionLayer
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+      - uses: "actions/checkout@v2"
+      - uses: "actions/setup-python@v1"
         with:
-          python-version: 3.8
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-          pip install SpeechRecognition
-          pip install wikipedia
-          pip install gTTS
-          pip install playsound
-          pip install pyaudio
+          python-version: "3.8"
+      - name: "Install in dev mode"
+        run: "python -m pip install -e .[dev]"
+      - name: "Import package"
+        run: "python -c 'import structlog; print(structlog.__version__)'"
