--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -47,6 +47,6 @@ jobs:
         with:
           python-version: "3.8"
       - name: "Install in dev mode"
-        run: "python -m pip install -e .[dev]"
+        run: "python -m pip install --upgrade pip"
       - name: "Import package"
         run: "python -c 'import structlog; print(structlog.__version__)'"
